<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dialog_view"
        android:text="@string/tv_dialog_box_view"
        android:textSize="@dimen/tv_dialog_box_view_textSize"
        android:textColor="@color/colorGreen"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dialog_edit"
        android:text="@string/tv_dialog_box_edit"
        android:layout_marginTop="40dp"
        android:textSize="@dimen/tv_dialog_box_edit_textSize"
        android:textColor="@color/colorGreen"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_dialog_delete"
        android:text="@string/tv_dialog_box_delete"
        android:layout_marginTop="80dp"
        android:textSize="@dimen/tv_dialog_box_delete_textSize"
        android:textColor="@color/colorGreen"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>